; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_dma-debug.c_get_hash_bucket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_dma-debug.c_get_hash_bucket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_bucket = type { i32 }
%struct.dma_debug_entry = type { i32 }

@dma_entry_hash = common dso_local global %struct.hash_bucket* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hash_bucket* (%struct.dma_debug_entry*, i64*)* @get_hash_bucket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hash_bucket* @get_hash_bucket(%struct.dma_debug_entry* %0, i64* %1) #0 {
  %3 = alloca %struct.dma_debug_entry*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.dma_debug_entry* %0, %struct.dma_debug_entry** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %3, align 8
  %8 = call i32 @hash_fn(%struct.dma_debug_entry* %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.hash_bucket*, %struct.hash_bucket** @dma_entry_hash, align 8
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.hash_bucket, %struct.hash_bucket* %9, i64 %11
  %13 = getelementptr inbounds %struct.hash_bucket, %struct.hash_bucket* %12, i32 0, i32 0
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load i64, i64* %6, align 8
  %17 = load i64*, i64** %4, align 8
  store i64 %16, i64* %17, align 8
  %18 = load %struct.hash_bucket*, %struct.hash_bucket** @dma_entry_hash, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.hash_bucket, %struct.hash_bucket* %18, i64 %20
  ret %struct.hash_bucket* %21
}

declare dso_local i32 @hash_fn(%struct.dma_debug_entry*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
